fixed icons not visible

--- a/css/creative.css
+++ b/css/creative.css
@@ -291,7 +291,7 @@ img::-moz-selection {
 @media (min-width: 992px) {
   #mainNav {
     border-color: transparent;
-    background-color: #011355;
+    background-color: #012681 !important;
   }
   #mainNav .navbar-brand {
     color: rgba(255, 255, 255, 0.7);
